--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -1,6 +1,6 @@
-# GHA workflow for running tests. 
+# GHA workflow for running tests.
 #
-# Largely taken from 
+# Largely taken from
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 # Please check the link for more detailed instructions
 
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
 
     steps:
       - uses: actions/checkout@v3
