--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 theme:
-    name: readthedocs
+    name: material
     features:
         - navigation.sections  # Sections are included in the navigation on the left.
         - toc.integrate  # Table of contents is integrated on the left; does not appear separately on the right.
@@ -13,20 +13,24 @@ repo_url: https://github.com/mjo22/cryojax
 repo_name: mjo22/cryojax
 
 plugins:
-    - search  # default search plugin; needs manually re-enabling when using any other plugins
     - autorefs  # Cross-links to headings
     - mknotebooks  # Jupyter notebooks
     - mkdocstrings:
         handlers:
           python:
-            setup_commands:
-                - import jaxtyping
-                - jaxtyping.set_array_name_format("array")
-                - import jax
-                - jax.ShapeDtypeStruct.__module__ = "jax"
-                - jax.core.ClosedJaxpr.__module__ = "jax.core"
-            selection:
-            rendering:
+            paths: [src]  # search packages in the src folder
+            options:
+              annotations_path: full
+              inherited_members: true
+              show_root_heading: true
+              show_root_full_path: true
+              show_if_no_docstring: true
+              show_signature_annotations: true
+              signature_crossrefs: true
+              show_source: false
+              members_order: source
+              heading_level: 12
+        
 
 
 nav:
