--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -2,7 +2,7 @@
 #
 # Largely taken from
 # https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-# Please check the link for more detailed instructions
+# Please check the link for more detailed instructions.
 
 name: Tests
 
