--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
     - Examples:
         - Introductory:
             - Simulate an image: 'examples/simulate-image.ipynb'
+            - Read a Dataset: 'examples/read-dataset.ipynb'
         - Intermediate:
             - Simulate a batch of images: 'examples/simulate-micrograph.ipynb'
     - Simulator API:
