--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,4 @@
 *.ipynb linguist-vendored
+*.mrc filter=lfs diff=lfs merge=lfs -text
+*.mrcs filter=lfs diff=lfs merge=lfs -text
+*.pdb filter=lfs diff=lfs merge=lfs -text
