--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,7 +21,15 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
+          lfs: true
           python-version: ${{ matrix.python-version }}
+      - name: Install Git LFS
+        run: |
+          sudo apt-get update
+          sudo apt-get install git-lfs
+          git lfs install
+      - name: Pull LFS Files
+        run: git lfs pull
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
