--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -34,6 +34,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install .[test]
+      - name: Checks with pre-commit
+        uses: pre-commit/action@v2.0.3
       - name: Test with pytest
         run: |
           pytest tests/
