--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -26,12 +26,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .[docs]
 
-      - name: Build docs
-        run: |
-          mkdocs build
-
-      - name: Upload docs
-        uses: actions/upload-artifact@v2
-        with:
-          name: docs
-          path: site
+      - name: generate and deploy documentation
+        run: mkdocs gh-deploy -d https://mjo22.github.io/cryojax
