--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,9 +1,8 @@
 name: Build docs
 
 on:
-  push:
-    branches:
-      - main
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -26,5 +25,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .[docs]
 
-      - name: generate and deploy documentation
-        run: mkdocs gh-deploy -d https://mjo22.github.io/cryojax
+      - name: Build and deploy documentation
+        run: mkdocs gh-deploy
