--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,9 +9,13 @@ theme:
 site_name: cryoJAX
 site_description: The documentation for cryoJAX.
 site_author: Michael O'Brien
+site_url: https://mjo22.github.io/cryojax/
 
 repo_url: https://github.com/mjo22/cryojax
 repo_name: mjo22/cryojax
+edit_uri: ""
+
+strict: false
 
 extra_javascript:
   - javascripts/mathjax.js
