--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,8 +1,10 @@
 name: Build docs
 
-on:
-  release:
-    types: [published]
+on: workflow_dispatch
+
+#on:
+#  release:
+#    types: [published]
 
 jobs:
   build:
