--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,10 @@
 name: Publish to PyPI
 
-on:
-  release:
-    types: [published]
+on: workflow_dispatch
+
+#on:
+#  release:
+#    types: [published]
 
 jobs:
   build:
