--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: [ 3.11 ]
+        python-version: [ 3.10 ]
         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
@@ -27,13 +27,5 @@ jobs:
           python -m pip install --upgrade pip
           python -m pip install .[docs]
 
-      - name: Build docs
-        run: |
-          mkdocs build
-          mkdocs build
-
-      - name: Upload docs
-        uses: actions/upload-artifact@v2
-        with:
-          name: docs
-          path: site  # where `mkdocs build` puts the built site
+      - name: Deploy documentation
+        run: mkdocs gh-deploy -d https://mjo22.github.io/cryojax
