--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: [ 3.10 ]
+        python-version: [ "3.10" ]
         os: [ ubuntu-latest ]
     runs-on: ${{ matrix.os }}
     steps:
