--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -1,10 +1,9 @@
 name: Build docs
 
-on: workflow_dispatch
-
-#on:
-#  release:
-#    types: [published]
+on:
+  release:
+    types: [published]
+  workflow_dispatch:
 
 jobs:
   build:
@@ -16,6 +15,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
