--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -25,8 +25,15 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install .[docs]
+          pip install mkdocs
+          pip install mkdocs-same-dir
+          pip install pymdown-extensions
+          pip install mkdocs-pymdownx-material-extras
+          pip install mkdocs-autorefs  
+          pip install mkdocs-simple-plugin
+          pip install mknotebooks
+          pip install mkdocstrings-python
+          pip install mkdocs-material
 
       - name: Deploy documentation
         run: mkdocs gh-deploy -d https://mjo22.github.io/cryojax
