fixes to allow for runtime type checking in tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest", "pycistem", "gemmi"]
+test = ["pytest", "pycistem", "gemmi", "typeguard"]
 
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
