seems like there are some bugs in typeguard or jaxtyping around 'self'. leave unresolved for now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-test = ["pytest", "pycistem", "gemmi", "typeguard"]
+test = ["pytest", "pycistem", "gemmi"]
 
 [build-system]
 requires = ["hatchling", "hatch-vcs"]
