switch to fori_loop. add a progress bar

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "starfile",
     "pandas",
     "typing_extensions>=4.5.0",
+    "tqdm",
 ]
 
 [project.optional-dependencies]
