add tutorial for building a scattering potential

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -60,6 +60,7 @@ nav:
     - 'index.md'
     - Examples:
         - Introductory:
+            - Compute a scattering potential: 'examples/compute-potential.ipynb'
             - Simulate an image: 'examples/simulate-image.ipynb'
             - Read a particle stack: 'examples/read-dataset.ipynb'
         - Intermediate:
