add docs for integration methods

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -68,3 +68,4 @@ nav:
             - Run a cross-correlation search: 'examples/cross-correlation-search.ipynb'
     - Simulator API:
         - 'api/simulator/scattering_potential.md'
+        - 'api/simulator/potential_integrators.md'
