--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,5 +1,10 @@
 mkdocs
 mkdocs-material
 pymdown-extensions
-mkdocstrings
+mkdocstrings-python
 mknotebooks
+mkdocs-gen-files
+mkdocs-same-dir
+mkdocs-pymdownx-material-extras
+mkdocs-autorefs
+mkdocs-simple-plugin
