--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -26,15 +26,15 @@ jobs:
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
-          lfs: true
+#          lfs: true
           python-version: ${{ matrix.python-version }}
-      - name: Install Git LFS
-        run: |
-          sudo apt-get update
-          sudo apt-get install git-lfs
-          git lfs install
-      - name: Pull LFS Files
-        run: git lfs pull
+#      - name: Install Git LFS
+#        run: |
+#          sudo apt-get update
+#          sudo apt-get install git-lfs
+#          git lfs install
+#      - name: Pull LFS Files
+#        run: git lfs pull
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
