--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,7 +65,7 @@ nav:
             - Simulate an image: 'examples/simulate-image.ipynb'
             - Read a particle stack: 'examples/read-dataset.ipynb'
         - Intermediate:
-            - Simulate a superposition of images: 'examples/simulate-micrograph.ipynb'
+            - Simulate a superposition of images with vmap: 'examples/simulate-micrograph.ipynb'
             - Write a STAR file of simulated data: 'examples/simulate-relion-dataset.ipynb'
             - Run a cross-correlation search: 'examples/cross-correlation-search.ipynb'
     - Simulator API:
