--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ dynamic = ["version"]
 dependencies = [
     "jax",
     "jaxlib",
-    "equinox>=0.11.0,<0.11.10",
+    "equinox>=0.11.0",
     "jaxtyping>=0.2.23",
     "lineax",
     "mrcfile",
