create overarching directory for documentation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,13 +70,36 @@ nav:
             - Run a cross-correlation search: 'examples/cross-correlation-search.ipynb'
     - API:
         - cryojax.simulator:
-            - 'api/simulator/scattering_potential.md'
-            - 'api/simulator/instrument_config.md'
-            - 'api/simulator/potential_integrators.md'
+            - Representing volumes:
+                - 'api/simulator/scattering_potential.md'
+                - 'api/simulator/pose.md'
+                - 'api/simulator/structural_ensemble.md'
+            - Image formation:
+                - 'api/simulator/potential_integrators.md'
+                - 'api/simulator/transfer_theory.md'
+                - 'api/simulator/scattering_theory.md'
+            - Putting it all together:
+                - 'api/simulator/instrument_config.md'
+                - 'api/simulator/imaging_pipeline.md'
         - cryojax.inference:
-            - 'api/inference/distributions.md'
+            - cryojax.inference.distributions:
+                - 'api/inference/distributions.md'
+            - 'api/inference/grid_search.md'
         - cryojax.data:
             - 'api/data/relion.md'
+        - cryojax.io:
+            - 'api/io/mrc.md'
+            - 'api/io/atom_loading.md'
+        - cryojax.image:
+            - 'api/image/functions.md'
+            - cryojax.image.operators:
+                - 'api/image/operators.md'
         - cryojax.coordinates:
             - 'api/coordinates/making_coordinates.md'
             - 'api/coordinates/transforming_coordinates.md'
+        - cryojax.rotations:
+            - 'api/rotations/lie_groups.md'
+            - 'api/rotations/conversions.md'
+        - cryojax.utils:
+            - 'api/utils/filter_specs.md'
+            - 'api/utils/transforms.md'
