update gitignore and compute cell output for new tutorial

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # generate-starfile-and-mrcs tutorial generated data
+docs/examples/heterogeneous_relion_dataset.star
+docs/examples/heterogeneous_relion_dataset.star
 docs/examples/relion_dataset.star
 docs/examples/relion_dataset.star~
 docs/examples/relion_dataset_particles/
