--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,6 +74,8 @@ nav:
                 - 'api/simulator/scattering_potential.md'
                 - 'api/simulator/pose.md'
                 - 'api/simulator/structural_ensemble.md'
+            - Modeling the solvent:
+                - 'api/simulator/solvent.md'
             - Image formation:
                 - 'api/simulator/potential_integrators.md'
                 - 'api/simulator/transfer_theory.md'
