scattering factor parameter table is an xarray.Dataset, and PengAtomicPotential gets scattering factors directly

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     "mrcfile",
     "starfile",
     "pandas",
+    "xarray",
     "typing_extensions>=4.5.0",
     "tqdm",
     "mdtraj",
