add tests for starfile writing

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # generate-starfile-and-mrcs tutorial generated data
 docs/examples/outputs/
 .coverage
+tests/outputs/
 
 .vscode/settings.json
 .DS_STORE
