--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -43,4 +43,4 @@ jobs:
           pip install -r tests/requirements.txt
       - name: Test with pytest
         run: |
-          pytest tests/test_pose_marginalization.py
+          pytest tests/
