changes starting to address #393

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,10 +83,8 @@ nav:
             - Putting it all together:
                 - 'api/simulator/instrument_config.md'
                 - 'api/simulator/image_model.md'
-        - cryojax.inference:
-            - cryojax.inference.distributions:
-                - 'api/inference/distributions.md'
-            - 'api/inference/grid_search.md'
+        - cryojax.distributions:
+            - 'api/inference/gaussian.md'
         - cryojax.data:
             - 'api/data/relion.md'
         - cryojax.io:
@@ -96,6 +94,8 @@ nav:
             - 'api/image/functions.md'
             - cryojax.image.operators:
                 - 'api/image/operators.md'
+            - cryojax.image.transformers:
+                - 'api/image/transformers.md'
         - cryojax.coordinates:
             - 'api/coordinates/making_coordinates.md'
             - 'api/coordinates/transforming_coordinates.md'
@@ -105,7 +105,8 @@ nav:
         - cryojax.constants:
             - 'api/constants/units.md'
             - 'api/constants/scattering_factor_parameters.md'
-        - cryojax.utils:
+        - cryojax.jax_util:
             - 'api/utils/filter_specs.md'
-            - 'api/utils/transforms.md'
+            - 'api/inference/grid_search.md'
+            - 'api/utils/pytree_transforms.md'
             - 'api/utils/useful_functions.md'
